# thestral

./: README.md  pyproject.toml
thestral/: main.py
